--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
         .veganbox .veganboxdiv {
             width: 100%;
-            /* height: 366px; */
+           height: 350px;
             background-color: #f8fafc69;
             padding-top: 10%;
         }
